--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Set-Formula
 
-0.01    Date/time
+0.01    2013.03./time
         First version, released on an unsuspecting world.
+
+0.02    2013.03./time
+        1. Prefix "_" added to private subroutiones.
+        2. POD enhanced for all exported subroutines, that appear after =head2 now.
+        These changed have been done for conformity with Pod::Coverage, that is used in pod-coverage.t
 
