Import of RIVILISM/Set-Formula-0.04 from CPAN.
gitpan-cpan-distribution: Set-Formula
gitpan-cpan-version:      0.04
gitpan-cpan-path:         RIVILISM/Set-Formula-0.04.tar.gz
gitpan-cpan-author:       RIVILISM
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -35,6 +35,7 @@ DESCRIPTION
    White characters including new line in formula are accepted and ignored.
    Thus formula might be placed into both a single line and multiple lines.
 
+   Return Values
    formula_checker and formula_calcul return nonzero on success,
    the undefined value otherwise.
 
