Import of RIVILISM/Set-Formula-0.05 from CPAN.
gitpan-cpan-distribution: Set-Formula
gitpan-cpan-version:      0.05
gitpan-cpan-path:         RIVILISM/Set-Formula-0.05.tar.gz
gitpan-cpan-author:       RIVILISM
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -102,7 +102,7 @@ SEE ALSO
    Infix notation          - http://en.wikipedia.org/wiki/Infix_notation
 
 AUTHOR
-   Mart Rivilis, rivilism@cpan.com
+   Mart E. Rivilis, rivilism@cpan.org
 
 INSTALLATION
 
